syntax = "proto3";

package dni;

message SndProtocolStatsTaskOptions {
    int32 protoCountSum = 1;
    double ratioMin = 2;
    double ratioMax = 3;
    repeated double score_thresholds = 4;
}
